--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css_lee/index.css" type="text/css" media="(min-width:940px)">
-    <link rel="stylesheet" href="./css_lee/index_tablet.css" type="text/css" media="(max-width:940px)">
+        <link rel="stylesheet" href="./css_lee/index.css" type="text/css" media="(min-width:961px)">
+        <link rel="stylesheet" href="./css_lee/index_tablet.css" type="text/css" media="(max-width:960px)">
+        <link rel="stylesheet" href="./css_lee/index_mobile.css" type="text/css" media="(max-width:640px)">
     <script src="./js_lee/index.js"></script>
 </head>
 
@@ -77,10 +78,10 @@
 
         <!-- 본문영역 -->
         <article>
-            <div>
+            <div class="none_mobile">
                 <!-- 캐러셀<opts: fade, inteval, aria-label> -->
                 <div id="carouselFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                    <div class="carousel-inner" style="position: relative;">
+                    <div class="carousel-inner" style="position: relative; background-color: black;">
                         <div class="carousel-indicators none_tablet">
                             <button type="button" data-bs-target="#carouselFade" data-bs-slide-to="0" class="active"
                                 aria-current="true" aria-label="Slide 1"></button>
@@ -171,13 +172,14 @@
             <!-- Main Theme -->
             <!-- 나이키 에어베이퍼맥스 EVO -->
             <div class="row">
-                <h4 id="season_best">2021 S/S Season Best</h4>
+                <h4 id="season_best" class="none_mobile"> 2021 S/S Season Best</h4>
                 <div>
-                    <img src="./image_lee/index_image/index_main_product02.jpg" alt="" class="main-image">
+                    <img src="./image_lee/index_image/index_main_product02.jpg" alt="" class="main-image none_mobile">
+                    <img src="./image_lee/index_image/index_mobile_01.jpg" alt="" class="main-image none_mobile only_mobile">
                 </div>
-                <div style="text-align: center;">
-                    <h1>나이키 에어 베이퍼맥스 EVO</h1>
-                    <p class="product_explanation">클래식한 에어맥스 시리즈를 리믹스하여<br>더욱 볼드해진 나이키 에어 베이퍼맥스 EVO를 만나보세요.</p>
+                <div class="explanation_container">
+                    <h1>나이키 에어 <br class="only_mobile"> 베이퍼맥스 EVO</h1>
+                    <p class="product_explanation">클래식한 에어맥스 시리즈를 <br class="only_mobile">리믹스하여 <br class="none_mobile">더욱 볼드해진 <br class="only_mobile"> 나이키 에어 베이퍼맥스 EVO를 만나보세요.</p>
                     <a href="#" class="sale_button">구매하기</a>
                 </div>
             </div>
@@ -186,11 +188,12 @@
             <!-- 조던 MA2 -->
             <div>
                 <div>
-                    <img src="./image_lee/index_image/index_main_product03.jpg" alt="" class="main-image">
+                    <img src="./image_lee/index_image/index_main_product03.jpg" alt="" class="main-image none_mobile">
+                    <img src="./image_lee/index_image/index_mobile_02.jpg" alt="" class="main-image only_mobile">
                 </div>
-                <div style="text-align: center;">
+                <div class="explanation_container">
                     <h1>조던 MA2</h1>
-                    <p class="product_explanation">최상의 편안함과 감각적인 스타일의 조던 MA2를 만나보세요.</p>
+                    <p class="product_explanation">최상의 편안함과 감각적인 스타일의 <br class="only_mobile"> 조던 MA2를 만나보세요.</p>
                     <a href="#" class="sale_button">구매하기</a>
                 </div>
             </div>
@@ -201,18 +204,20 @@
             <div>
                 <h4>Style Magazine</h4>
                 <div id="style-magazine">
-                    <a href="#" class="style-magazine"><img src="./image_lee/index_image/index_spring_swipper_01.jpg"
+                    <video autoplay="autoplay" muted="muted" loop="loop" -webkit-playsinline="-webkit-playsinline" playsinline="playsinline" class="only_mobile">
+                        <source src="./video_lee/index_mobile_03.mp4">
+                    </video>
+                    <a href="#" class="style-magazine none_mobile"><img src="./image_lee/index_image/index_spring_swipper_01.jpg"
                             alt="" class="style-magazine-image"></a>
-                    <a href="#" class="style-magazine"><img src="./image_lee/index_image/index_spring_swipper_03.jpg"
+                    <a href="#" class="style-magazine none_mobile"><img src="./image_lee/index_image/index_spring_swipper_03.jpg"
                             alt="" class="style-magazine-image"></a>
-                    <a href="#" class="style-magazine"><img src="./image_lee/index_image/index_spring_swipper_07.jpg"
+                    <a href="#" class="style-magazine none_mobile"><img src="./image_lee/index_image/index_spring_swipper_07.jpg"
                             alt="" class="style-magazine-image"></a>
                 </div>
 
-
-                <div style="text-align: center;">
+                <div class="explanation_container">
                     <h1>스프링 재킷 스타일</h1>
-                    <p class="product_explanation">봄을 위한 여성들의 재킷 제품들과 함께 레이어드룩을 완성해보세요.</p>
+                    <p class="product_explanation">봄을 위한 여성들의 재킷 제품들과 함께 <br class="only_mobile"> 레이어드룩을 완성해보세요.</p>
                     <a href="#" class="sale_button">구매하기</a>
                     <a href="#" class="sale_button">더 많은 스타일링 보기</a>
                 </div>
@@ -223,11 +228,12 @@
             <!-- 나이키 에어맥스 비바 -->
             <div>
                 <div>
-                    <img src="./image_lee/index_image/index_main_product04.jpg" alt="" class="main-image">
+                    <img src="./image_lee/index_image/index_main_product04.jpg" alt="" class="main-image none_mobile">
+                    <img src="./image_lee/index_image/index_mobile_03.jpg" alt="" class="main-image only_mobile">
                 </div>
-                <div style="text-align: center;">
+                <div class="explanation_container">
                     <h1>나이키 에어맥스 비바</h1>
-                    <p class="product_explanation">에어맥스 유닛과 아이코닉한 디자인의 비바와 함께<br>시선을 압도하는 세련된 스타일을 연출해보세요.</p>
+                    <p class="product_explanation">맥스 에어 유닛과 아이코닉한 디자인의 <br class="only_mobile"> 비바와 함께<br class="none_mobile">시선을 압도하는 <br class="only_mobile"> 세련된 스타일을 연출해보세요.</p>
                     <a href="#" class="sale_button">구매하기</a>
                 </div>
             </div>
@@ -241,7 +247,7 @@
                     <div style="position: relative;">
                         <a href="#" class="trending-now">
                             <img src="./image_lee/index_image/index_trending_now_03.jpg" alt=""
-                                class="trending-now-image">
+                                class="trending-now-image" id="main-image04">
                             <div class="trending-now-comment">
                                 <p>월드투어 컬렉션</p>
                                 <a href="">구매하기</a>
@@ -251,7 +257,7 @@
                     <div style="position: relative;">
                         <a href="#" class="trending-now">
                             <img src="./image_lee/index_image/index_trending_now_02.jpg" alt=""
-                                class="trending-now-image">
+                                class="trending-now-image" id="main-image05">
                             <div class="trending-now-comment">
                                 <p>에어조틱 컬렉션</p>
                                 <a href="">구매하기</a>
@@ -263,8 +269,70 @@
                 </div>
             </div>
 
+            <div>
+                <h4>Featured Shoes</h4>
+                <div class="feature_shoes_container">
+                    <a href="">
+                        <div class="feature_item">
+                            <img src="./image_lee/index_image/index_product_item02.jpg" alt="">
+                            <p class="feature_item_title">나이키 데이브레이크</p>
+                            <p class="feature_item_text">여성 신발 라이프스타일</p>
+                            <p class="feature_item_text">119,000원</p>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="feature_item">
+                            <img src="./image_lee/index_image/index_product_item03.jpg" alt="">
+                            <p class="feature_item_title">나이키 에어맥스97</p>
+                            <p class="feature_item_text">남성 신발 라이프스타일</p>
+                            <p class="feature_item_text">199,000원</p>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="feature_item">
+                            <img src="./image_lee/index_image/index_product_item09.jpg" alt="">
+                            <p class="feature_item_title">나이키 코트 레거시</p>
+                            <p class="feature_item_text">여성 뮬</p>
+                            <p class="feature_item_text">69,000원</p>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="feature_item">
+                            <img src="./image_lee/index_image/index_product_item12.jpg" alt="">
+                            <p class="feature_item_title">나이키 인피니티 플라이트2</p>
+                            <p class="feature_item_text">여성 신발 러닝</p>
+                            <p class="feature_item_text">179,000원</p>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="feature_item">
+                            <img src="./image_lee/index_image/index_product_item13.jpg" alt="">
+                            <p class="feature_item_title">나이키 코스믹 유니티</p>
+                            <p class="feature_item_text">성인공용 신발 농구</p>
+                            <p class="feature_item_text">179,000원</p>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="feature_item">
+                            <img src="./image_lee/index_image/index_product_item14.jpg" alt="">
+                            <p class="feature_item_title">나이키 에어 줌 빅토리</p>
+                            <p class="feature_item_text">성인공용 신발 골프</p>
+                            <p class="feature_item_text">239,000원</p>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="feature_item">
+                            <img src="./image_lee/index_image/index_product_item15.jpg" alt="">
+                            <p class="feature_item_title">나이키 에어 줌 슈퍼렙</p>
+                            <p class="feature_item_text">남성 신발 트레이닝</p>
+                            <p class="feature_item_text">139,000원</p>
+                        </div>
+                    </a>
 
-            <div class="row">
+                </div>
+            </div>
+
+            <!-- <div class="row">
                 <h4>Featured Shoes</h4>
                 <div class="col-sm-6">
                     <div class="card ">
@@ -306,7 +374,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <div>
                 <h4>Apparel Essentials</h4>
@@ -323,30 +391,87 @@
 
         </article>
         <footer>
-            <ul>
-                <li>매장안내</li>
-                <li>나이키 트레이팅 가이드</li>
-                <li>로그인</li>
-                <li>멤버 가입</li>
-            </ul>
-            <ul>
-                <li>고객센터</li>
-                <li>080-022-0182</li>
-                <li>주문/결제</li>
-                <li>배송</li>
-                <li>주문배송조회</li>
-                <li>멤버쉽 혜택/서비스</li>
-                <li>공지사항</li>
-                <li>1:1 채팅 문의</li>
-                <li>1:1 이메일문의</li>
-                <li>이용약관</li>
-                <li>개인정보처리방침</li>
-            </ul>
-
-            <ul>
-                <li>ABOUT NIKE</li>
-                <li>나이키에 대하여</li>
-            </ul>
+            <div id="information_region">
+                <div>
+                    <ul>
+                        <li><a href="#">주문배송</a></li>
+                        <li><a href="#">매장안내</a></li>
+                        <li><a href="#">나이키 트레이닝 가이드</a></li>
+                        <li><a href="#">로그인</a></li>
+                        <li><a href="#">멤버 가입</a></li>
+                    </ul>
+                    <ul>
+                        <li>고객센터</li>
+                        <li><a href="#">010-4352-6954</a></li>
+                        <li><a href="#">주문/결제</a></li>
+                        <li><a href="#">배송</a></li>
+                        <li><a href="#">주문배송조회</a></li>
+                        <li><a href="#">멤버쉽 혜택/서비스</a></li>
+                        <li><a href="#">공지사항</a></li>
+                        <li><a href="#">1:1 채팅 문의</a></li>
+                        <li><a href="#">1:1 이메일 문의</a></li>
+                        <li><a href="#">이용약관</a></li>
+                        <li><a href="#">개인정보처리방침</a></li>
+                    </ul>
+    
+                    <ul>
+                        <li>ABOUT NIKE</li>
+                        <li><a href="">나이키에 대하여</a></li>
+                    </ul>
+    
+                    <ul>
+                        <li>SOCIAL</li>
+                        <li><a href="#"><img src="./image_lee/index_icon/twitter_icon_fix.png" alt=""></a></li>
+                        <li><a href="#"><img src="./image_lee/index_icon/facebook_icon_fix.png" alt=""></a></li>
+                        <li><a href="#"><img src="./image_lee/index_icon/youtube_icon_fix.png" alt=""></a></li>
+                        <li><a href="#"><img src="./image_lee/index_icon/instagram_icon_fix.png" alt=""></a></li>
+                    </ul>
+                </div>
+                <div class="only_mobile" id="information_region_mobile">
+                    <ul>
+                        <li><a href="#">주문배송</a></li>
+                        <li><a href="#">매장안내</a></li>
+                        <li><a href="#">고객센터</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <a href="#" style="margin: 0px; padding: 0px;"><img src="./image_lee/index_icon/location_icon.png"
+                            alt="">대한민국</a>
+                    <p style="margin-bottom: 0px;">&#169; 2021 Nike, Inc. All Rights Reserved</p>
+                </div>
+                <div>
+                    <a href="#">이용약관</a>
+                    <a href="#">개인정보처리방침</a>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <div>
+                        <p>(유)나이키코리아</p>
+                        <p>대표: KIM MYUNG HEE</p>
+                        <p>서울 강남구 테헤라라로 152 강남파이낸스센터 31층</p>
+                    </div>
+                    <div>
+                        <p>통신판매업신고번호 : 2011-서울강남-03461</p>
+                        <p>등록번호 : 220-88-09068</p>
+                        <p class="none_tablet"><a href="#">사업자정보확인</a></p>
+                        <br>
+                        <p>고객센터 전화문의 <a href="">010-4352-6954</a></p>
+                    </div>
+                    <div>
+                        <p>FAX : 02-6744-5880</p>
+                        <p>E-mail : service&#64;nike.co.kr</p>
+                        <p>호스팅서비스사업자 : 브리즈</p>
+                    </div>
+                </div>
+                <div>
+                    <p>안전거래를 위해 현금 등으로 결제 시 저희 쇼핑몰에서 가입한 <br class="none_tablet"> KG 이니시스의 구매안전 서비스 (채무지급보증)을 이용하실 수 있습니다</p>
+                    <br>
+                    <p>온라인디지털콘텐츠사업발전법에 의한 <a href="#">콘텐츠보호안내 자세히보기</a></p>
+                </div>
+            </div>
         </footer>
     </div>
 </body>
